<resources>
    <string name="app_name">Tutor finder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_logout">Logout</string>

    <string name="menu_news_feed">NewsFeed</string>
    <string name="menu_post">Post Form</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_profile">Profile</string>
</resources>