<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news_feed">

    <fragment
        android:id="@+id/nav_news_feed"
        android:name="com.vithack.tutorfinder.ui.NewsFeedFragment"
        android:label="@string/menu_news_feed"
        tools:layout="@layout/fragment_news_feed" />

    <fragment
        android:id="@+id/nav_post"
        android:name="com.vithack.tutorfinder.ui.PostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vithack.tutorfinder.ui.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>